# Hartree-Fock-in-CPP

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
data/basis_set_exchange/: 6-31++g.0.json  6-31++g_st_.0.json  6-31++g_st__st_.0.json  6-31+g.0.json  6-31+g_st_.0.json  6-31+g_st__st_.0.json  6-311++g(2d,2p).0.json  6-311++g(3df,3pd).0.json  6-311++g.0.json  6-311++g_st_.0.json  6-311++g_st__st_.0.json  6-311+g(2d,p).0.json  6-311+g.0.json  6-311+g_st_.0.json  6-311+g_st__st_.0.json  6-311g(d,p).0.json  6-311g_st__st_.0.json  6-31g(d,p).0.json  6-31g(d,p).1.json  6-31g_st__st_.0.json  6-31g_st__st_.1.json  admm-1.1.json  admm-2.1.json  admm-3.1.json  ano-vt-dz.1.json  ano-vt-qz.1.json  ano-vt-tz.1.json  aug-admm-1.1.json  aug-admm-2.1.json  aug-admm-3.1.json  aug-cc-pv6z.1.json  cc-pv6z.1.json  orp.1.json  x2c-jfit.0.json  x2c-sv(p)all-s.1.json  x2c-svpall-s.1.json  x2c-tzvpall-s.1.json  x2c-tzvppall-s.1.json
doc/: Hartree_Fock_Tutorial.tex
example/: H2O_sto_3g_optimization.json  H2_6_31g.json
src/: catch.h  main.cpp  run.cpp  run.h
src/basis/: basis.cpp  basis.h  basis_unit_test.cpp
src/geometry/: geometry.cpp  geometry.h  periodic_table.h  resolve.cpp  resolve.h
src/global/: error.h  global.h
src/gradient/: driver.cpp  driver.h  gradient.cpp  gradient.h  numerical.cpp  numerical.h  utils.cpp  utils.h
src/hf/: rhf.cpp  rhf.h  rhf_unit_test.cpp
src/integral/: homebrew.cpp  homebrew.h  integral.cpp  integral.h  libint_interface.cpp  libint_interface.h  obara_saika.cpp  obara_saika.h  obara_saika_unit_test.cpp  rys_quadrature.cpp  rys_quadrature.h  rys_quadrature_unit_test.cpp
src/integral/faster_kernel/: integral.cpp  integral.h  integral_test.cpp  integral_unit_test.cpp  rys_quadrature.cpp  rys_quadrature.h  rys_quadrature_unit_test.cpp
src/integral/faster_kernel/cpu_kernels/: 1.cpp  10.cpp  11.cpp  12.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  rys_quadrature_kernel.cpp
src/mixing/: simple_mixing.cpp  simple_mixing.h
src/optimize/: optimize.cpp  optimize.h
src/scf/: occupation.cpp  occupation.h  scf.cpp  scf.h  setup.h
src/util/: armadillo.h  cx_double.h  error.h  gsl_converter.h  json.h  json_parser.h  json_write.h  printer.h  ptree.h  resolve.h  time.h
src/version/: version.h.in
